; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_check_bbr_for_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/tcp_stacks/extr_bbr.c_bbr_check_bbr_for_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcp_bbr = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@BBR_RTT_PROP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tcp_bbr*, i64, i32, i64)* @bbr_check_bbr_for_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bbr_check_bbr_for_state(%struct.tcp_bbr* %0, i64 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.tcp_bbr*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.tcp_bbr* %0, %struct.tcp_bbr** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i64 %3, i64* %8, align 8
  store i32 0, i32* %9, align 4
  %10 = load i64, i64* %6, align 8
  %11 = load %struct.tcp_bbr*, %struct.tcp_bbr** %5, align 8
  %12 = getelementptr inbounds %struct.tcp_bbr, %struct.tcp_bbr* %11, i32 0, i32 1
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = sub nsw i64 %10, %14
  %16 = load %struct.tcp_bbr*, %struct.tcp_bbr** %5, align 8
  %17 = load i32, i32* @BBR_RTT_PROP, align 4
  %18 = call i64 @bbr_get_rtt(%struct.tcp_bbr* %16, i32 %17)
  %19 = icmp sge i64 %15, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %4
  %21 = load %struct.tcp_bbr*, %struct.tcp_bbr** %5, align 8
  %22 = load i64, i64* %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @bbr_set_epoch(%struct.tcp_bbr* %21, i64 %22, i32 %23)
  store i32 1, i32* %9, align 4
  br label %25

25:                                               ; preds = %20, %4
  %26 = load %struct.tcp_bbr*, %struct.tcp_bbr** %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = load i32, i32* %9, align 4
  %29 = load %struct.tcp_bbr*, %struct.tcp_bbr** %5, align 8
  %30 = getelementptr inbounds %struct.tcp_bbr, %struct.tcp_bbr* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i64, i64* %8, align 8
  %33 = call i32 @bbr_state_change(%struct.tcp_bbr* %26, i64 %27, i32 %28, i32 %31, i64 %32)
  ret void
}

declare dso_local i64 @bbr_get_rtt(%struct.tcp_bbr*, i32) #1

declare dso_local i32 @bbr_set_epoch(%struct.tcp_bbr*, i64, i32) #1

declare dso_local i32 @bbr_state_change(%struct.tcp_bbr*, i64, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
